# lib221e

./: CMakeLists.txt  CMakeSettings.json  README.md  lib221eConfig.cmake.in  lib221eConfigVersion.cmake.in
include/mitch/: Mitch_BLEConnection.h  Mitch_Data.h  Mitch_HW.h  Mitch_SerialConnection.h  Mitch_StreamingData.h
include/mitch_v2/: MitchV2_BLEConnection.h  MitchV2_Data.h  MitchV2_HW.h  MitchV2_SerialConnection.h  MitchV2_StreamingData.h
include/muse/: Muse_HW.h  Muse_SerialConnection.h
include/muse_v2/: MuseV2_HW.h  MuseV2_SerialConnection.h
include/serial/: SerialConnection.h  v8stdint.h
include/serial/impl/: SerialConnectionUnix.h  SerialConnectionWindows.h
src/mitch/: Mitch_BLEConnection.cpp  Mitch_SerialConnection.cpp  Mitch_StreamingData.cpp
src/mitch_v2/: MitchV2_BLEConnection.cpp  MitchV2_SerialConnection.cpp  MitchV2_StreamingData.cpp
src/muse/: Muse_SerialConnection.cpp
src/muse_v2/: MuseV2_SerialConnection.cpp
src/serial/: SerialConnection.cpp
src/serial/impl/: SerialConnectionUnix.cpp  SerialConnectionWindows.cpp
src/serial/impl/list_ports/: ListPortsLinux.cpp  ListPortsWin.cpp
test/: mitch_ble_test.cpp  mitch_serial_test.cpp  mitch_v2_ble_test.cpp  mitch_v2_serial_test.cpp  muse_serial_test.cpp  muse_v2_serial_test.cpp
